# rust-ma-world

./: AGENTS.md  Cargo.toml  Makefile  PLAN.md  TODO.md
.github/workflows/: ci.yml  release.yml
ma-world-core/: Cargo.toml  README.md
ma-world-core/src/: bundle.rs  config.rs  identity.rs  ipfs.rs  kubo.rs  lib.rs
spec/: README.md  ma-bundle-0.0.1.md  ma-fields-0.0.1.md  ma-ipfs-0.0.1.md
world/: Cargo.toml  PLAN.md  README.md
world/locales/: en_UK.ftl  nb_NO.ftl
world/src/: api.rs  config.rs  i18n.rs  main.rs  startup_publish.rs  status.rs
