[package]
name = "ma-world-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
dirs = "6"
hex = "0.4"
ma-core = { version = "0.6.6", features = ["kubo"] }
ma-did = "0.4"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
xdg = "2"
