[package]
name = "ma-world"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
cid = "0.11"
dirs = "6"
fluent-bundle = "0.15"
hex = "0.4"
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid", "rand"] }
ma-core = "0.6.2"
ma-did = "0.4"
ma-world-core = { path = "../ma-world-core" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unic-langid = "0.9"
